now working in a limited but pretty decent capacity

--- a/index.html
+++ b/index.html
@@ -7,14 +7,34 @@
     <link rel="stylesheet" href="style.css" />
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.0-rc.1/jquery.mobile-1.1.0-rc.1.min.css" />
     <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <script src="scripts/underscore-min.js"></script>
     <script src="scripts/knockout-2.0.0.js"></script>
-    <script src="scripts/ko.jqm.bindings.min.js"></script>
+    <script src="scripts/knockout.mapping-latest.js"></script>
+    <!-- <script src="scripts/ko.jqm.bindings.min.js"></script> -->
     <script src="scripts/util.js"></script>
+    <script src="scripts/diffmodel.js"></script>
     <script src="scripts/bindings.js"></script>
     <script src="http://code.jquery.com/mobile/1.1.0-rc.1/jquery.mobile-1.1.0-rc.1.min.js"></script>
 </head> 
 
-<body> 
+<body>
+<div id="channels" class="loggedin" data-role="page">
+    <div data-role="header">
+        <h1>Products</h1>
+    </div>
+    <div data-role="content" data-bind="foreach: products">
+        <a data-bind="text: name, buttonize: name, click: $parent.navigate"></a>
+    </div>
+</div>
+<div id="feed" class="loggedin" data-role="page">
+    <div data-role="header">
+        <a data-bind="click: backToChannels" data-role="button">Back to Channels</a>
+		<h1 data-bind="text: productName">Feed</h1>
+	</div>
+	<div data-role="content" data-bind="foreach: {data: feed, afterAdd: afterAdd}">
+	    <div data-bind="html: $data"></div>
+	</div>
+</div>
 <div id="login" data-role="page">
     <div data-role="header">
 		<h1>Welcome</h1>
@@ -27,14 +47,6 @@
 		    <input data-bind="value: password" type="password" name="apikey" placeholder="API Key"/>
 		    <input type="submit" value="Connect"/>
 		</form>	
-	</div>
-</div>
-<div id="home" data-role="page">
-    <div data-role="header">
-		<h1>Home</h1>
-	</div>
-	<div data-role="content">	
-	    Content!
 	</div>
 </div>
 </body>
